--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/petpal_logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/petPal-rbg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PetPal</title>
+    <title>PetPal - Find your Pet Friend!</title>
   </head>
   <body>
     <div id="root"></div>
